chore: contact info. update

--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                     <i class="fab fa-linkedin" aria-hidden="true"></i>
                     <span>LinkedIn</span>
                 </a>
-                <a href="mailto:bindiego@google.com" class="contact-link">
+                <a href="mailto:maverickcn@gmail.com" class="contact-link">
                     <i class="fas fa-envelope" aria-hidden="true"></i>
                     <span>Email</span>
                 </a>
