--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
                         </div>
                         <div class="terminal-line output">▸ Cloud Architecture (GCP, BigQuery, Dataflow)</div>
                         <div class="terminal-line output">▸ DevOps & Infrastructure (Docker, K8s, CI/CD)</div>
-                        <div class="terminal-line output">▸ Backend Development (Java, Python, C++)</div>
+                        <div class="terminal-line output">▸ Backend Development (C, Go, Rust, Java, Python)</div>
                         <div class="terminal-line output">▸ Data Engineering (Elasticsearch, Apache Beam)</div>
                         <div class="terminal-line output">▸ Systems Programming (Linux, Shell, Automation)</div>
                         
